--- a/app/src/main/res/layout/item_post_full.xml
+++ b/app/src/main/res/layout/item_post_full.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_image"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="@dimen/post_image_margin_top"
             android:textSize="18sp"/>
 
         <ImageButton
@@ -61,8 +61,8 @@
             android:layout_width="@dimen/post_like_dislike"
             android:layout_height="@dimen/post_like_dislike"
             android:layout_below="@+id/post_text"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="@dimen/post_image_margin_top"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:background="@drawable/ic_like_default"/>
 
         <TextView
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="@dimen/post_marging_start"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like"/>
 
         <ImageButton
@@ -80,7 +80,7 @@
             android:layout_height="@dimen/post_like_dislike"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="@dimen/post_marging_start"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like_count"
             android:background="@drawable/ic_dislike_default"/>
 
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
             android:layout_marginStart="@dimen/post_marging_start"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/dislike"/>
 
     </RelativeLayout>
