--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -27,7 +27,7 @@
             android:layout_height="@dimen/post_owner_avatar_height"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/post_marging_end"
         />
 
         <TextView
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/post_marging_start"
             android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like"/>
 
@@ -74,7 +74,7 @@
             android:layout_width="@dimen/post_like_dislike"
             android:layout_height="@dimen/post_like_dislike"
             android:layout_below="@+id/post_text"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/post_marging_start"
             android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/like_count"
             android:background="@drawable/ic_dislike_default"/>
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/post_text"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/post_marging_start"
             android:layout_marginTop="@dimen/post_image_margin_top"
             android:layout_toEndOf="@id/dislike"/>
 
