--- a/app/src/main/res/layout/progress_pagination.xml
+++ b/app/src/main/res/layout/progress_pagination.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<ProgressBar
+    android:id="@+id/more_progress"
     android:background="@color/progressPaginationColor"
-    android:gravity="center">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
 
-    <ProgressBar
-        android:id="@+id/more_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</FrameLayout>
