--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,229 +1,251 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/profile_layout"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="4dp">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <include android:id="@+id/progress"
+             layout="@layout/loading"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_gravity="center"
+             android:visibility="gone"
+    />
+
+    <include android:id="@+id/error"
+             layout="@layout/error"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_gravity="center"
+             android:visibility="gone"
+    />
+
+    <LinearLayout
+        android:id="@+id/profile_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:orientation="vertical"
+        android:paddingTop="4dp">
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp">
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/profile_name"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="First Name"
-                android:textSize="20sp"/>
+                android:paddingTop="16dp">
 
-            <ImageView
-                android:id="@+id/edit_profile_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_name"
-                android:layout_alignParentEnd="true"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="First Name"
+                    android:textSize="20sp"/>
 
-            <TextView
-                android:id="@+id/profile_surname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_name"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="SurName"
-                android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/edit_profile_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_name"
+                    android:layout_alignParentEnd="true"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-            <ImageView
-                android:id="@+id/edit_profile_surname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_surname"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/profile_name"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_surname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profile_name"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="SurName"
+                    android:textSize="20sp"/>
 
-            <TextView
-                android:id="@+id/profile_sex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_surname"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="Sex"
-                android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/edit_profile_surname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_surname"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/profile_name"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-            <ImageView
-                android:id="@+id/edit_profile_sex"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_sex"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/profile_surname"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_sex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profile_surname"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="Sex"
+                    android:textSize="20sp"/>
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/edit_profile_sex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_sex"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/profile_surname"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
+
+            </RelativeLayout>
 
 
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp">
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/profile_city"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="City"
-                android:textSize="20sp"
-            />
+                android:paddingTop="16dp">
 
-            <ImageView
-                android:id="@+id/edit_profile_city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_city"
-                android:layout_alignParentEnd="true"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="City"
+                    android:textSize="20sp"
+                />
 
-            <TextView
-                android:id="@+id/profile_about"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_city"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="About"
-                android:textSize="20sp"
-            />
+                <ImageView
+                    android:id="@+id/edit_profile_city"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_city"
+                    android:layout_alignParentEnd="true"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-            <ImageView
-                android:id="@+id/edit_profile_about"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_about"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/profile_city"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_about"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profile_city"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="About"
+                    android:textSize="20sp"
+                />
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/edit_profile_about"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_about"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/profile_city"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-    </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        </android.support.v7.widget.CardView>
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/profile_mobile_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:text="Mobile number"
-                android:textSize="20sp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/edit_profile_mobile_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_mobile_number"
-                android:layout_alignParentEnd="true"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_mobile_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:paddingTop="16dp"
+                    android:text="Mobile number"
+                    android:textSize="20sp"/>
 
-            <TextView
-                android:id="@+id/profile_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_mobile_number"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="email"
-                android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/edit_profile_mobile_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_mobile_number"
+                    android:layout_alignParentEnd="true"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:paddingTop="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-            <ImageView
-                android:id="@+id/edit_profile_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_email"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/profile_mobile_number"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profile_mobile_number"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="email"
+                    android:textSize="20sp"/>
 
-            <TextView
-                android:id="@+id/profile_skype"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/profile_email"
-                android:paddingBottom="16dp"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:text="Skype"
-                android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/edit_profile_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_email"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/profile_mobile_number"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-            <ImageView
-                android:id="@+id/edit_profile_skype"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/profile_skype"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/profile_email"
-                android:paddingEnd="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_edit_profile_24dp"/>
+                <TextView
+                    android:id="@+id/profile_skype"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profile_email"
+                    android:paddingBottom="16dp"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:text="Skype"
+                    android:textSize="20sp"/>
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/edit_profile_skype"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/profile_skype"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/profile_email"
+                    android:paddingEnd="16dp"
+                    android:paddingStart="16dp"
+                    android:src="@drawable/ic_edit_profile_24dp"/>
 
-    </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+
+    </LinearLayout>
+
+</FrameLayout>
