--- a/app/src/main/res/layout/item_post_text.xml
+++ b/app/src/main/res/layout/item_post_text.xml
@@ -42,6 +42,14 @@
             android:textSize="16sp"
         />
 
+        <TextView
+            android:id="@+id/post_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/owner_name"
+            android:layout_toEndOf="@id/owner_image"
+        />
+
         <ImageView
             android:id="@+id/post_menu_dot"
             android:layout_width="@dimen/post_like_dislike"
