--- a/app/src/main/res/layout/fragment_post_new.xml
+++ b/app/src/main/res/layout/fragment_post_new.xml
@@ -28,6 +28,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/open_camera"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
