--- a/app/src/main/res/layout/fragment_post_new.xml
+++ b/app/src/main/res/layout/fragment_post_new.xml
@@ -8,16 +8,21 @@
         android:id="@+id/new_post_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLength="20"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:maxLength="200"
         android:maxLines="5"
     />
 
     <ImageView
         android:id="@+id/new_image_post"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_below="@id/new_post_text"
-        android:src="@drawable/circle"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
     />
 
     <LinearLayout
