--- a/app/src/main/res/menu/menu_new_post.xml
+++ b/app/src/main/res/menu/menu_new_post.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/new_post_item"
         android:icon="@drawable/ic_ok_post_24dp"
-        android:title="Create post"
+        android:title="@string/post_upload_item"
         android:visible="true"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/clear_image_item"
-        android:title="Clear photo"
+        android:title="@string/post_clear_image_item"
         app:showAsAction="never"/>
 
 </menu>
